--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
   "dependencies": {
     "ansi-escapes": "4.x",
     "chalk": "4.x",
-    "consola": "^2.15.3",
     "figures": "3.x",
     "markdown-table": "^3.0.2",
     "picocolors": "^1.0.0",
+    "pretty-time": "^1.1.0",
     "webpack": "^5.65.0",
     "webpackbar": "^5.0.2",
     "wrap-ansi": "7.x"
@@ -74,6 +74,7 @@
     "@types/cli-progress": "^3.9.2",
     "@types/jest": "26.0.23",
     "@types/node": "^17.0.4",
+    "@types/pretty-time": "^1.1.2",
     "@types/wrap-ansi": "^8.0.1",
     "cz-emoji": "^1.3.1",
     "eslint": "^7.30.0",
