--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "tsc-progress",
-  "version": "0.5.0",
-  "description": "a starter for typescript lib",
+  "version": "0.0.0",
+  "description": "display progress bar in tsc build",
   "keywords": [
     "typescript",
-    "lib",
-    "template",
-    "aiou"
+    "build",
+    "webpackbar",
+    "progressbar"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/spring-catponents/ts-lib-template#readme",
+  "homepage": "https://github.com/JiangWeixian/tsc-progress#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/spring-catponents/ts-lib-template.git"
+    "url": "git+https://github.com/JiangWeixian/tsc-progress.git"
   },
   "bugs": {
-    "url": "https://github.com/spring-catponents/ts-lib-template/issues",
+    "url": "https://github.com/JiangWeixian/tsc-progress/issues",
     "email": "jiangweixian1994@gmail.com"
   },
   "author": {
@@ -30,8 +30,6 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib && ttsc",
-    "run_dev": "rimraf lib && ttsc",
-    "dev": "npm-watch run_dev",
     "test": "pnpm run build && jest",
     "pretest": "pnpm run build",
     "ci:publish": "pnpm run build && pnpx changeset publish",
@@ -45,21 +43,8 @@
       "eslint --fix"
     ]
   },
-  "watch": {
-    "run_dev": {
-      "patterns": [
-        "src"
-      ],
-      "extensions": "ts",
-      "quiet": true,
-      "legacyWatch": true,
-      "delay": 1000,
-      "runOnChangeOnly": false
-    }
-  },
   "dependencies": {
     "ansi-escapes": "4.x",
-    "chalk": "4.x",
     "figures": "3.x",
     "markdown-table": "^3.0.2",
     "picocolors": "^1.0.0",
