--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib && ttsc",
-    "test": "pnpm run build && jest",
-    "pretest": "pnpm run build",
+    "test": "echo test",
     "ci:publish": "pnpm run build && pnpx changeset publish",
     "ci:version": "pnpx changeset version",
     "ci:snapshot": "pnpx changeset version --snapshot beta",
@@ -49,12 +48,10 @@
     "markdown-table": "^3.0.2",
     "picocolors": "^1.0.0",
     "pretty-time": "^1.1.0",
-    "webpack": "^5.65.0",
-    "webpackbar": "^5.0.2",
     "wrap-ansi": "7.x"
   },
   "devDependencies": {
-    "@aiou/eslint-config": "0.2.1",
+    "@aiou/eslint-config": "0.3.2",
     "@changesets/cli": "^2.16.0",
     "@types/cli-progress": "^3.9.2",
     "@types/jest": "26.0.23",
